trisquel-gtk-theme: Corrected scrollbar offset

--- a/9.0/trisquel-gtk-theme/data/usr/share/themes/Trisquel/gtk-3.0/gtk-widgets.css
+++ b/9.0/trisquel-gtk-theme/data/usr/share/themes/Trisquel/gtk-3.0/gtk-widgets.css
@@ -2787,7 +2787,7 @@ scrollbar.vertical slider,
 scrollbar.vertical .slider {
     min-width: 12px;
     min-height: 42px;
-    margin: -1px 0px -1px 0px;
+    margin: 0px;
 	background-image: linear-gradient(to right,
 		shade(@scrollbar_slider, 0.95),
 		shade(@scrollbar_slider, 0.8));
